--- a/sass/style.sass
+++ b/sass/style.sass
@@ -112,7 +112,6 @@ label
   padding-left: .8rem
 
 .checkbox, .radio
-  // width: fit-content
   display: grid
   grid-template-columns: 2rem 1fr
   justify-content: center
@@ -124,7 +123,6 @@ input[type="checkbox"]
   width: 2rem
   height: 2rem
   background: #fff
-  // box-shadow: inset 0 0 5px rgb(0 0 0 / 0.2)
   transition: 500ms
   border: .1rem solid $grey2
   border-radius: $radius
@@ -278,12 +276,6 @@ dialog
     background-color: $black
     color: #fff
 
-.button--grey
-  color: $white
-  background-color: $grey3
-  transition: 0.2s linear
-  cursor: default
-
 .header,
 .main,
 .footer
@@ -344,11 +336,11 @@ dialog
 .icon--hours
   background-image: url('../images/contacts-clock.svg')
 
-.icon__minus
-  background-image: url('../images/icons/minus.svg')
+.icon--star-yellow
+  background-image: url('../images/icons/star-yellow.svg')
 
-.icon__plus
-  background-image: url('../images/icons/plus.svg')
+.icon--star--grey
+  background-image: url('../images/icons/star-grey.svg')
 
 .link--grey
   color: $grey1
@@ -1320,12 +1312,18 @@ dialog
   background-position: 50% 50%
   cursor: pointer
 
+.cart_contents__products__item__middle__count__minus
+  background-image: url('../images/icons/minus.svg')
+
 .cart_contents__products__item__middle__count__current
   justify-self: center
   align-self: center
   font-size: 1.4rem
   line-height: 130%
   font-weight: 700
+
+.cart_contents__products__item__middle__count__plus
+  background-image: url('../images/icons/plus.svg')
 
 .cart_contents__products__item__middle__price
   font-size: 1.2rem
@@ -2929,18 +2927,18 @@ dialog
   display: grid
   gap: 1rem
   grid-template-columns: 39% 33% 28%
-  grid-template-rows: 3.2rem 2.6rem calc(2.8rem + 1rem + .6rem) auto auto auto
-  grid-template-areas: "helpers condition condition" "gallery heading heading" "gallery guarantee guarantee" "gallery markdown markdown" "gallery options buy" "tabs tabs tabs"
+  grid-template-rows: 3.2rem 2.6rem calc(2.8rem + 1rem + .6rem) auto auto
+  grid-template-areas: "helpers condition condition" "gallery heading heading" "gallery guarantee guarantee" "gallery options buy" "tabs tabs tabs"
 
   @media screen and (max-width: $desktop)
     grid-template-columns: 53% 47%
-    grid-template-rows: 3.2rem auto calc(2.8rem + 1rem + .6rem) auto auto auto auto
-    grid-template-areas: "helpers condition" "gallery heading" "gallery guarantee" "gallery markdown" "gallery options" "gallery buy" "tabs tabs"
+    grid-template-rows: 3.2rem auto calc(2.8rem + 1rem + .6rem) auto auto auto
+    grid-template-areas: "helpers condition" "gallery heading" "gallery guarantee" "gallery options" "gallery buy" "tabs tabs"
 
   @media screen and (max-width: $tablet)
     grid-template-columns: 100%
-    grid-template-rows: 3.2rem auto calc(2.8rem + 1rem + .6rem) auto auto auto auto
-    grid-template-areas: "condition" "heading" "guarantee" "markdown" "helpers" "gallery" "options" "buy" "tabs"
+    grid-template-rows: 3.2rem auto calc(2.8rem + 1rem + .6rem) auto auto auto
+    grid-template-areas: "condition" "heading" "guarantee" "helpers" "gallery" "options" "buy" "tabs"
 
 .product__helpers
   grid-area: helpers
@@ -2963,10 +2961,6 @@ dialog
   background-color: #fff
   border-radius: $radius
 
-.product__helpers__stock--out_of_stock
-  color: $white
-  background-color: $grey-dark1
-  
 .product__condition
   grid-area: condition
   display: flex
@@ -3019,14 +3013,13 @@ dialog
 
 .product__gallery__preview__image
   padding: .8rem
-  width: 7.6rem
-  height: 7.6rem
+  width: 100%
   cursor: pointer
   background-color: #fff
   border-radius: $radius
 
 .product__gallery__preview__up
-  width: 6rem
+  width: 100%
   height: 1.6rem
   background-size: 1.6rem
   background-image: url('../images/icons/up-black.svg')
@@ -3035,7 +3028,7 @@ dialog
   cursor: pointer
 
 .product__gallery__preview__down
-  width: 6rem
+  width: 100%
   height: 1.6rem
   background-size: 1.6rem
   background-image: url('../images/icons/down-black.svg')
@@ -3070,17 +3063,6 @@ dialog
   background-image: url('../images/icons/guarantee.svg')
   background-repeat: no-repeat
   background-position: left 1.2rem top 50%
-
-.product__markdown
-  grid-area: markdown
-  margin-right: .8rem
-  padding: 2rem 1.4rem
-  width: calc(100% - .8rem)
-  font-size: 1.4rem
-  font-weight: 400
-  line-height: 130%
-  background-color: $grey1
-  border-radius: $radius
 
 .product__options
   grid-area: options
@@ -3218,13 +3200,7 @@ dialog
   text-decoration: line-through
   white-space: nowrap
 
-.product__buy__cart
-  display: flex
-  flex-direction: row
-  gap: .4rem
-  width: 100%
-
-.product__buy__cart__add_to_cart, .product__buy__cart__out_of_stock
+.product__buy__add_to_cart
   width: 100%
   font-size: 1.6rem
   font-weight: 500
@@ -3234,41 +3210,12 @@ dialog
   @media screen and (max-width: $tablet)
     padding: 2rem
 
-.product__buy__cart__count
-  display: grid
-  grid-template-columns: 3.2rem auto 3.2rem
-  align-items: center
-  padding: .4rem .8rem
-  width: auto
-  font-size: 1.4rem
-  font-weight: 700
-  line-height: 130%
-  text-align: center
-
-.product__buy__item__icon
-  display: inline-block
-  padding: .8rem
-  width: 3.2rem
-  height: 3.2rem
-  background-repeat: no-repeat
-  background-position: 50% 50%
-  cursor: pointer
-
-.product__buy__cart__count__current
-  justify-self: center
-  align-self: center
-  font-size: 1.4rem
-  line-height: 130%
-  font-weight: 700
-
-
 .product__buy__row2_buttons
   display: grid
   grid-template-columns: auto 4.8rem
   gap: .4rem
 
 .product__buy__row2_buttons__order
-  padding: 1.2rem
   width: 100%
   background-color: #fff
   font-size: 1.6rem
@@ -3354,16 +3301,23 @@ dialog
     margin-bottom: 4rem
     padding-top: 0
 
+.product__tabs > .product__tabs__radio,
+.product__tabs .product__tabs__content > .product__tabs__content__block
+  display: none
+
+#product__promo:checked ~ .product__tabs__content .product__promo,
+#product__characteristics:checked ~ .product__tabs__content .product__characteristics,
+#product__reviews:checked ~ .product__tabs__content .product__reviews
+  display: flex
+
 .product__tabs__list
   grid-area: tabs_navigation
   display: flex
   gap: .6rem
-  overflow-x: scroll
-  scrollbar-gutter: stable
-  scrollbar-width: none
-  scrollbar-color: $white
 
-.tabs_label
+.product__tabs__list__item
+
+.product__tabs__list__item__label
   display: inline-block
   padding: .6rem 1.8rem .8rem
   font-size: 1.4rem
@@ -3374,54 +3328,32 @@ dialog
   background-color: #fff
   cursor: pointer
 
-#product__promo:checked ~ .product__tabs__list .product__promo,
-#product__characteristics:checked ~ .product__tabs__list .product__characteristics,
-#product__reviews:checked ~ .product__tabs__list .product__reviews
-  
-  .tabs_label
+  &:hover
     color: #fff
     background-color: $black
-    cursor: default
+    cursor: pointer
 
-.product__tabs__list__tab
+  &:active
+    color: #fff
+    background-color: $black
+    cursor: pointer
 
-  .tabs_label
-
-    &:hover
-      color: #fff
-      background-color: $black
-      cursor: pointer
-
-    &:active
-      color: #fff
-      background-color: $black
-      cursor: pointer
+#product__promo:checked ~ .product__tabs__list .product__tabs__list__item--promo .product__tabs__list__item__label,
+#product__characteristics:checked ~ .product__tabs__list .product__tabs__list__item--characteristics .product__tabs__list__item__label,
+#product__reviews:checked ~ .product__tabs__list .product__tabs__list__item--reviews .product__tabs__list__item__label
+  color: #fff
+  background-color: $black
+  cursor: default
 
 .product__tabs__content
   grid-area: tab__content
 
-.product__tabs > .product__tabs__radio,
-.product__tabs .product__tabs__content > .product__tabs__content__block
-  display: none
-
-#product__promo:checked ~ .product__tabs__content .product__promo,
-#product__characteristics:checked ~ .product__tabs__content .product__characteristics,
-#product__reviews:checked ~ .product__tabs__content .product__reviews
-  display: flex
-
-.product__characteristics
-  grid-area: tab_content
-
-.product__reviews
-  grid-area: tab_content
-
-.product__promo
-  grid-area: tab_content
-  display: flex
+.product__tabs__content__block--promo
   flex-direction: column
+  grid-area: tab_content
   gap: 1rem
 
-.product__promo__hero
+.product__tabs__content__block__hero
   width: 100%
   position: relative
   display: flex
@@ -3431,7 +3363,7 @@ dialog
   border-radius: $radius
   overflow: hidden
 
-.product__promo__hero__heading
+.product__tabs__content__block__hero__heading
   margin: 0 auto
   padding: 5rem 5rem 0 5rem
   max-width: 80rem
@@ -3446,7 +3378,7 @@ dialog
     max-width: 100%
     font-size: 2rem
 
-.product__promo__hero__text
+.product__tabs__content__block__hero__text
   margin: 0 auto
   padding: 0 5rem
   max-width: 80rem
@@ -3461,7 +3393,7 @@ dialog
     max-width: 100%
     font-size: 1.4rem
 
-.product__promo__hero__accent
+.product__tabs__content__block__hero__accent
   margin: 0 auto
   padding: 0 5rem 5rem 5rem
   max-width: 80rem
@@ -3476,53 +3408,50 @@ dialog
     max-width: 100%
     font-size: 1.6rem
   
-.product__promo__hero__image
+.product__tabs__content__block__hero__image
 
-.product__promo__hero__image--accent
+.product__tabs__content__block__image--accent
   margin: 0 auto
-  // z-index: -1
-  // object-fit: cover
-  // bottom: 0
   max-width: 80rem
 
   @media screen and (max-width: $tablet)
     max-width: 80%
 
-.product__promo__hero__image--background
+.product__tabs__content__block__hero__image--background
   position: absolute
   z-index: -2
   object-fit: contain
   bottom: 0
 
-.product__promo__double, .product__promo__tripple
+.product__tabs__content__block__double, .product__tabs__content__block__tripple
   display: grid
   gap: 1rem
 
-.product__promo__double
+.product__tabs__content__block__double
   grid-template-columns: 1fr 1fr
 
-.product__promo__tripple
+.product__tabs__content__block__tripple
   grid-template-columns: 1fr 1fr 1fr
 
   @media screen and (max-width: $tablet)
     grid-template-columns: 1fr
 
-.product__promo__double__item, .product__promo__tripple__item
+.product__tabs__content__block__double__item, .product__tabs__content__block__tripple__item
   position: relative
   border-radius: $radius
   overflow: hidden
 
-.product__promo__double__item
+.product__tabs__content__block__double__item
   min-height: 19.6rem
 
-.product__promo__tripple__item
+.product__tabs__content__block__tripple__item
   min-height: 47.6rem
 
   @media screen and (max-width: $tablet)
     min-height: unset
     padding-bottom: 40%
   
-.product__promo__double__item__heading, .product__promo__tripple__item__heading
+.product__tabs__content__block__double__item__heading, .product__tabs__content__block__tripple__item__heading
   padding: 4rem 4rem 2rem 4rem
   font-size: 4rem
   font-weight: 500
@@ -3533,10 +3462,10 @@ dialog
     padding: 2rem 2rem 1rem 2rem
     font-size: 2rem
 
-.product__promo__tripple__item__heading
+.product__tabs__content__block__tripple__item__heading
   max-width: 70%
 
-.product__promo__double__item__text, .product__promo__tripple__item__text
+.product__tabs__content__block__double__item__text, .product__tabs__content__block__tripple__item__text
   padding: 0 4rem 4rem 4rem
   font-size: 2rem
   font-weight: 500
@@ -3547,7 +3476,7 @@ dialog
     padding: 0 2rem 2rem 2rem
     font-size: 1.4rem
 
-.product__promo__tripple__item__cover
+.product__tabs__content__block__tripple__item__cover
   position: absolute
   top: 0
   z-index: -1
@@ -3555,7 +3484,7 @@ dialog
   height: 100%
   background-image: linear-gradient($black, transparent)
 
-.product__promo__double__item__image, .product__promo__tripple__item__image
+.product__tabs__content__block__double__item__image, .product__tabs__content__block__tripple__item__image
   position: absolute
   width: 100%
   height: 100%
@@ -3565,7 +3494,7 @@ dialog
   border-radius: $radius
   background-color: #000
 
-.product__promo__store
+.product__tabs__content__block__store
   display: grid
   flex-direction: column
   gap: 3rem
@@ -3576,7 +3505,7 @@ dialog
   @media screen and (max-width: $tablet)
     gap: 1rem
 
-.product__promo__store__heading
+.product__tabs__content__block__store__heading
   padding: 4rem 4rem 0 4rem
   font-size: 4rem
   font-weight: 500
@@ -3587,7 +3516,7 @@ dialog
     padding: 2rem 2rem 0 2rem
     font-size: 2rem
 
-.product__promo__store__description
+.product__tabs__content__block__store__description
   padding: 0 4rem 4rem 4rem
   font-size: 2rem
   font-weight: 500
@@ -3598,7 +3527,7 @@ dialog
     padding: 0 2rem 2rem 2rem
     font-size: 1.4rem
 
-.product__promo__store__gallery
+.product__tabs__content__block__store__gallery
   display: grid
   grid-template-columns: repeat(6, 1fr)
   grid-template-rows: 15.8rem 
@@ -3612,11 +3541,8 @@ dialog
     margin: 0 auto
     max-width: 100%
     overflow-x: scroll
-    scrollbar-gutter: stable
-    scrollbar-width: none
-    scrollbar-color: $white
 
-.product__promo__text-n-img
+.product__tabs__content__block__text-n-img
   position: relative
   display: grid
   grid-template-columns: 1fr 1fr
@@ -3625,13 +3551,13 @@ dialog
   @media screen and (max-width: $tablet)
     grid-template-columns: 1fr
 
-.mobile--reverse
+.product__tabs__content__block__text-n-img--mobile_reverse
   
   @media screen and (max-width: $tablet)
     display: flex
     flex-direction: column-reverse
 
-.product__promo__text-n-img__text__heading
+.product__tabs__content__block__text-n-img__text__heading
   font-size: 4rem
   font-weight: 500
   line-height: 110%
@@ -3640,7 +3566,7 @@ dialog
   @media screen and (max-width: $tablet)
     font-size: 2rem
 
-.product__promo__text-n-img__text
+.product__tabs__content__block__text-n-img__text
   display: grid
   gap: 3rem
   padding: 5rem
@@ -3651,7 +3577,7 @@ dialog
     padding: 2rem
     font-size: 1.4rem
 
-.product__promo__text-n-img__text__details__list__item__heading
+.product__tabs__content__block__text-n-img__text__details__list__item__heading
   font-size: 4rem
   font-weight: 500
   line-height: 110%
@@ -3660,7 +3586,7 @@ dialog
   @media screen and (max-width: $tablet)
     font-size: 2rem
 
-.product__promo__text-n-img__text__details
+.product__tabs__content__block__text-n-img__text__details
   font-size: 2rem
   font-weight: 400
   line-height: 130%
@@ -3669,24 +3595,24 @@ dialog
   @media screen and (max-width: $tablet)
     font-size: 1.4rem
 
-.product__promo__text-n-img__image
+.product__tabs__content__block__text-n-img__image
   border-radius: $radius
   background-color: #000
   object-fit: cover
   width: 100%
   height: 100%
 
-.product__promo__text-n-img__text__details__list
+.product__tabs__content__block__text-n-img__text__details__list
   display: grid
   gap: 3rem
 
-.product__promo__text-n-img__text__details__list__item
+.product__tabs__content__block__text-n-img__text__details__list__item
   border-bottom: .1rem solid $black
 
   &:last-child
     border-bottom: none
 
-.product__promo__text-n-img__text__details__list__item__text
+.product__tabs__content__block__text-n-img__text__details__list__item__text
   display: block
   padding-bottom: 2rem
   font-size: 2rem
@@ -3696,12 +3622,15 @@ dialog
   @media screen and (max-width: $tablet)
     font-size: 1.4rem
 
-.product__tabs__content__block--characteristics
-  display: flex
+.product__tabs__content__block--characteristics  
+  grid-area: tab_content
   flex-direction: column
   gap: 3rem
   margin-top: 3rem
   max-width: 80rem
+  
+  @media screen and (max-width: $tablet)
+    flex-direction: column-reverse
 
 .product__tabs__content__block__characteristics_group
   display: flex
@@ -3739,13 +3668,15 @@ dialog
   color: $black
   width: 50%
 
-.product__tabs__content__block__characteristics_group__list__item__value
   ul
     list-style-type: disc
 
     li
       margin-left: 2rem
       list-style-type: disc
+
+.product__tabs__content__block--reviews
+  grid-area: tab_content
 
 .product__tabs__content__block__reviews
   display: flex
@@ -3773,13 +3704,6 @@ dialog
   color: $black
   border-radius: $radius
 
-.product__tabs__content__block__reviews__button
-  text-align: center
-
-  @media screen and (max-width: $tablet)
-    padding: 2rem
-    width: 100%
-
 .product__tabs__content__block__reviews__rating
   display: flex
   gap: 1rem
@@ -3797,20 +3721,12 @@ dialog
   width: auto
 
 .product__tabs__content__block__reviews__rating__stars__star
-
-.icon_star
   display: block
   width: 2rem
   height: 2rem
   background-position: 50% 50%
   background-size: contain
   background-repeat: no-repeat
-
-.icon_star--yellow
-  background-image: url('../images/icons/star-yellow.svg')
-
-.icon_star--grey
-  background-image: url('../images/icons/star-grey.svg')
 
 .product__tabs__content__block__reviews__list
   display: flex
@@ -3834,9 +3750,8 @@ dialog
 
   @media screen and (max-width: $tablet)
     grid-template-columns: 1fr
-    grid-template-rows: 1.6rem auto auto
+    grid-template-rows: auto auto auto
     grid-template-areas: "review_meta" "review_summary" "review_text"
-
 
 .product__tabs__content__block__reviews__list__item__image
   grid-area: review_image
@@ -3868,9 +3783,6 @@ dialog
 
 .product__tabs__content__block__reviews__list__item__description__link
   color: $pink
-
-  @media screen and (max-width: $tablet)
-    display: block
 
 .product__tabs__content__block__reviews__list__item__text
   grid-area: review_text
