--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,6 +1,7 @@
 $font: 'NT Somic', Arial, Helvetica, sans-serif
 $std-size: 1.6rem
 $radius: 0.4rem
+$shadow: 0.2rem 0.2rem 1.4rem 0 rgba(10, 10, 10, 0.1)
 
 $desktop: 1350px
 $tablet: 1024px
@@ -30,12 +31,12 @@ $orange: #FFAC4B
 /* Common start */
 html
   font-size: 62.5%
+  scrollbar-gutter: stable
 
 body
   display: flex
   flex-direction: column
   justify-content: space-between
-  // grid-template-rows: auto 1fr auto
   min-height: 100vh
   width: 100%
   min-width: 39rem
@@ -46,9 +47,10 @@ body
   line-height: 130%
   color: $black
   background-color: $white
+  scrollbar-gutter: stable
 
-  // @media screen and (max-width: $tablet)
-  //   display: block
+  &:has(dialog[open])
+    overflow: hidden
 
 h1, h2, h3, h4, h5, h6
   font-family: $font
@@ -551,6 +553,7 @@ dialog
 .header__top__getintouch__item__link
   font-size: 1.4rem
   line-height: 1.8rem
+  cursor: pointer
 
 .getintouch__city
   text-decoration: none
@@ -2438,7 +2441,7 @@ dialog
   flex-direction: column
   gap: 2rem
   background-color: $white
-  box-shadow: 0.2rem 0.2rem 1.4rem 0 rgba(10, 10, 10, 0.1)
+  box-shadow: $shadow
   border-radius: $radius
 
   @media screen and (max-width: $tablet)
@@ -2475,7 +2478,7 @@ dialog
     height: 100%
     margin: 0
     padding: 0
-    box-shadow: 0.2rem 0.2rem 1.4rem 0 rgba(10, 10, 10, 0.1)
+    box-shadow: $shadow
     overscroll-behavior: contain
     overflow-y: scroll
 
@@ -3806,6 +3809,52 @@ dialog
   font-size: 1.2rem
   color: $grey-soft
   white-space: nowrap
-
-
 /* Product end */
+
+/*POPUP*/
+.popup_city
+  margin: 11rem auto
+  width: 48.4rem
+  border-radius: $radius
+  box-shadow: $shadow
+
+  &::backdrop
+    background: rgba(0, 0, 0, 0.5)
+
+  &:focus-visible, &:focus
+    outline: none
+
+.popup_city__container
+  display: grid
+  grid-template-areas: "city_heading city_close" "none none"
+  grid-template-columns: 1fr 1fr
+  grid-template-rows: auto auto
+  row-gap: 2rem
+  column-gap: 1rem
+  padding: 2rem
+
+.popup_city__container__heading
+  grid-area: city_heading
+  font-size: 2rem
+  font-weight: 700
+  line-height: 130%
+
+.popup_city__container__close
+  grid-area: city_close
+  align-self: end
+  margin-left: auto
+  width: 2rem
+  height: 2rem
+  background-image: url('../images/icons/close.svg')
+  background-size: contain
+  background-position: right 50%
+  background-repeat: no-repeat
+  cursor: pointer
+
+.popup_city__container__button
+  width: 100%
+  text-align: center
+
+// .scroll-lock
+//   overflow: hidden
+/*POPUP*/
