--- a/sass/style.sass
+++ b/sass/style.sass
@@ -282,6 +282,15 @@ dialog
     background-color: $black
     color: #fff
 
+.button--grey
+  color: #fff
+  background-color: $grey3
+  transition: 0.2s linear
+
+  &:hover
+    background-color: $black
+    color: #fff
+
 .header,
 .main,
 .footer
@@ -3317,7 +3326,7 @@ dialog
   text-decoration: line-through
   white-space: nowrap
 
-.product__buy__add_to_cart
+.product__buy__add_to_cart, .product__buy__cart__out_of_stock
   width: 100%
   font-size: 1.6rem
   font-weight: 500
@@ -3326,6 +3335,13 @@ dialog
 
   @media screen and (max-width: $tablet)
     padding: 2rem
+
+.product__buy__cart__out_of_stock
+  cursor: default
+
+  &:hover
+    background-color: $grey3
+    color: #fff
 
 .product__buy__row2_buttons
   display: grid
@@ -4228,6 +4244,96 @@ dialog
   width: 16.8rem
 
 .popup_1click__result__button
+  margin: 0 auto
+
+.popup_notify
+
+  @media screen and (min-width: $tablet+1)
+    margin: 12rem auto
+    width: 57.8rem
+
+.popup_notify__container
+  grid-template-areas: "heading close" "form form" "result result"
+  grid-template-columns: auto 2rem
+
+  a
+    color: $pink
+
+.popup_notify__container__heading
+  grid-area: heading
+  font-size: 2.8rem
+  font-weight: 700
+  line-height: 130%
+
+  @media screen and (max-width: $tablet)
+    font-size: 2rem
+
+.popup_notify__container__close
+  grid-area: close
+  align-self: end
+  margin-left: auto
+  width: 2rem
+  height: 2rem
+  background-size: contain
+  background-position: right 50%
+  background-repeat: no-repeat
+  cursor: pointer
+
+.popup_notify__container__form
+  grid-area: form
+  display: flex
+  margin-top: 4rem
+  flex-direction: column
+  gap: 1rem
+
+  @media screen and (max-width: $tablet)
+    margin-top: 2rem
+
+.popup_notify__container__message
+  grid-area: message
+  padding: 1.4rem 2rem
+  font-size: 1.4rem
+  font-weight: 400
+  line-height: 130%
+  color: $black
+  background-color: $grey1
+  border-radius: $radius
+
+.popup_notify__container__form__input
+  padding: 1.4rem
+  font-size: 1.4rem
+  background-color: #fff
+
+.popup_notify__container__form__button
+  width: 100%
+
+.popup_notify__container__capcha
+  margin-bottom: 1rem
+
+.popup_notify__container__terms
+  grid-area: terms
+
+.popup_notify__result
+  grid-area: result
+  display: none
+  flex-direction: column
+  gap: 2rem
+
+.popup_notify__result__message
+  margin-top: 4rem
+  padding: 1.4rem 2rem
+  font-size: 1.4rem
+  font-weight: 400
+  line-height: 130%
+  color: $black
+  background-color: $grey1
+  border-radius: $radius
+
+.popup_notify__result__image
+  margin: 0 auto
+  width: 16.8rem
+
+.popup_notify__result__button
   margin: 0 auto
 
 /*POPUP*/
